<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright Christoph Gritschenberger 2014.
  ~
  ~ This file is part of OwnList.
  ~
  ~ OwnList is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ OwnList is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with OwnList.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>

    <string name="app_name">ownlist</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="input_item">Item</string>
    <string name="add_item">Add</string>
    <string name="host_address">Host Address</string>
    <string name="host_adress_example">e.g. www.example.com</string>
    <string name="path_example">e.g. dir/to/ownlist/directory/</string>
    <string name="use_ssl">use SSL/TLS</string>
    <string name="leave_empty_for_default">leave empty for default</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="remote_path">Remote Path</string>
    <string name="remote_port">Port</string>

</resources>
