<!--
  ~ Copyright Christoph Gritschenberger 2014.
  ~
  ~ This file is part of OwnList.
  ~
  ~ OwnList is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ OwnList is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with OwnList.  If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:inputType="textUri"
        android:key="server_host_address"
        android:singleLine="true"
        android:summary="foo"
        android:title="@string/host_address" />

    <EditTextPreference
        android:inputType="number"
        android:key="server_port"
        android:singleLine="true"
        android:summary=""
        android:title="@string/remote_port" />

    <EditTextPreference
        android:inputType="textUri"
        android:key="server_remote_path"
        android:singleLine="true"
        android:summary="foo"
        android:title="@string/remote_path" />

    <EditTextPreference
        android:inputType="text"
        android:key="server_user"
        android:singleLine="true"
        android:summary="foo"
        android:title="@string/username" />

    <EditTextPreference
        android:inputType="textPassword"
        android:key="server_password"
        android:singleLine="true"
        android:summary="**********"
        android:title="@string/password" />

</PreferenceScreen>
